# e-inky

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE.third-party.md  README.md  clippy.toml  package.json  pnpm-lock.yaml  rustfmt.toml
crates/crengine/: Cargo.toml  README.md  build.rs
crates/crengine/patches/: README.md
crates/crengine/src/: lib.rs  raw.rs
crates/crengine/src/shim/: shim.c  shim.h
crates/encoder/: Cargo.toml
crates/encoder/src/: lib.rs
crates/sync/: Cargo.toml
crates/sync/src/: lib.rs
crates/xtc/: Cargo.toml
crates/xtc/src/: lib.rs
scripts/: update-crengine.sh
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: main.rs
src/pages/: index.tsx
src/styles/: globals.css
