[package]
name = "e-inky"
version = "0.1.0"
edition = "2021"
description = "Desktop manager for preparing Xteink X4 libraries"
license = "MIT"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "1.5", features = ["dialog-open", "fs-read-dir", "fs-read-file", "path-all", "shell-open"] }

[profile.release]
lto = true
codegen-units = 1
