[package]
name = "e-inky"
version = "0.1.0"
edition = "2021"
description = "Desktop manager for preparing Xteink X4 libraries"
license = "MIT"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
encoder = { path = "../crates/encoder" }
library = { path = "../crates/library" }
serde = { workspace = true }
serde_json = { workspace = true }
sync = { path = "../crates/sync" }
tauri = { version = "1.5", features = ["dialog-open", "fs-read-dir", "fs-read-file", "path-all", "shell-open"] }
thiserror = { workspace = true }
tracing = { workspace = true }
xtc = { path = "../crates/xtc" }

[profile.release]
lto = true
codegen-units = 1
